2009-11-21  Ethan A Merritt  <merritt@u.washington.edu>

	* Update version info for upcoming release of 4.4.rc1

	* demo/Makefile.am.in demo/bldg.png: Ensure that this demo image
	is included in the distribution tarball.

2009-11-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Fix support web page URL.

	* src/show.c (show_version): Less info help lines.

2009-11-12  Thomas Sefzick <thse@users.sourceforge.net>

	* term/canvas.trm:  Fix initialization failure on non-unix platforms.

2009-11-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updated introduction.

2009-11-06  Allin Cottrell  <cottrell@wfu.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_convert):  Work around a font
	problem in the win32 backend for pango/cairo character rendering.
	Conditional on WIN32 and libpango > 1.21, request rendering by freetype
	rather than win32. Fix suggested by cairo developer Behdad Esfahbod.

2009-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: ticslevel => xyplane.

	* src/color.c (make_palette) src/graphics.c (plot_image_or_update_axes):
	Remove useless warning messages.

	* src/axis.c (add_tic_user) src/term.c (enh_err_check enhanced_recursion): 
	Replace in-line warnings sent to stderr by instead calling int_warn().

2009-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/breader.c:  Give df_libgd_get_pixel() a valid return value even
	if it's only a dummy function because there is no png support.

2009-11-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Document "linetype <n>" option of linecolor and
	textcolor.

2009-11-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.dj2 config/makefile.cyg config/makefile.mgw
	config/makefile.nt config/makefile.os2: Added GNUPLOT_JS_DIR.

	* term/canvas.trm (CANVAS_graphics): Fix // vs \ and / for jsdir and
	Windows.

2009-10-24  David Marx  <itsdmarx@users.sourceforge.net>
